# autohooks-plugin-pylint

./: .pylintrc  CHANGELOG.md  Pipfile  README.md  RELEASE.md  pyproject.toml  setup.py
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci-python.yml  deploy-pypi.yml  update-header.yml
autohooks/plugins/pylint/: __init__.py  pylint.py
changelog/: v22.8.0.md  v22.8.1.md
tests/: lint_test.py  pyproject.test.toml  test_pylint.py
