[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
authors = ["Greenbone Networks GmbH <info@greenbone.net>"]
readme = "README.md"
license = "AGPL-3.0-or-later"

[tool.poetry]
name = "autohooks-plugin-pylint"
version = "22.8.0"
description = "An autohooks plugin for python code linting via pylint"
license = "GPL-3.0-or-later"
authors = ["Greenbone Networks GmbH <info@greenbone.net>"]
readme = "README.md"
homepage = "https://github.com/greenbone/autohooks-plugin-pylint"
repository = "https://github.com/greenbone/autohooks-plugin-pylint"
documentation = ""
classifiers = [
  # Full list: https://pypi.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
  { include = "autohooks" },
  { include = "CHANGELOG.md", format = "sdist"},
  { include = "RELEASE.md", format = "sdist"},
  { include = "poetry.lock", format = "sdist"},
  { include = "poetry.toml", format = "sdist"},
]
keywords = [
  "git",
  "formatting",
  "linting",
  "hooks",
  "pylint",
]

[tool.poetry.dependencies]
python = "^3.7"
pylint = "^2.8.3"
autohooks = ">=2.2.0"

[tool.poetry.dev-dependencies]
black = "22.6.0"
pylint = "^2.4.4"
pontos = "^22.8.1"
autohooks-plugin-black = "^22.7.0"


[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39', 'py310']
exclude = '''
/(
    \.git
  | \.hg
  | \.venv
  | \.circleci
  | \.github
  | \.vscode
  | _build
  | build
  | dist
  | docs
)/
'''

[tool.autohooks]
mode = "poetry"
pre-commit = ['autohooks.plugins.black', 'autohooks.plugins.pylint']


[tool.pontos.version]
version-module-file = "autohooks/plugins/pylint/__version__.py"
