[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "autohooks-plugin-pylint"
version = "23.4.0"
description = "An autohooks plugin for python code linting via pylint"
license = "GPL-3.0-or-later"
authors = ["Greenbone AG <info@greenbone.net>"]
readme = "README.md"
homepage = "https://github.com/greenbone/autohooks-plugin-pylint"
repository = "https://github.com/greenbone/autohooks-plugin-pylint"
documentation = ""
# Full list: https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
  { include = "autohooks" },
  { include = "poetry.lock", format = "sdist"},
  { include = "poetry.toml", format = "sdist"},
]
keywords = [
  "git",
  "formatting",
  "linting",
  "hooks",
  "pylint",
]

[tool.poetry.dependencies]
python = "^3.7.2"
pylint = ">=2.8.3"
autohooks = ">=2.2.0"

[tool.poetry.dev-dependencies]
coverage = "^7.2.3"
mypy = ">=0.981"
pontos = ">=22.8.1"
autohooks-plugin-black = ">=22.7.0"
autohooks-plugin-isort = ">=22.8.0"

[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
exclude = '''
/(
    \.git
  | \.hg
  | \.venv
  | \.circleci
  | \.github
  | \.vscode
  | _build
  | build
  | dist
  | docs
)/
'''

[tool.isort]
profile = "black"
line_length = 80

[tool.autohooks]
mode = "poetry"
pre-commit = ['autohooks.plugins.black', 'autohooks.plugins.isort', 'autohooks.plugins.pylint']

[tool.pontos.version]
version-module-file = "autohooks/plugins/pylint/__version__.py"

[tool.mypy]
ignore_missing_imports = true
